modal x button is right aligned. no longer interferes with image

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -352,6 +352,7 @@ form {
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
+  max-width: 700px;
 }
 
 .close {
@@ -359,6 +360,10 @@ form {
   float: right;
   font-size: 28px;
   font-weight: bold;
+}
+
+.close-container {
+  text-align: right;
 }
 
 .close:hover,
